<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_promotion"
        android:enabled="true"
        android:icon="@drawable/ic_coffee"
        android:title="@string/promotion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_store"
        android:enabled="true"
        android:icon="@drawable/ic_store"
        android:title="@string/store"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />


</menu>